--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,22 @@
 
 :root {
   --primary-white: #fff;
-  --primary-orange: #f9ab00;
-  --primary-dark: rgba(255,255,255,0);
+  --primary-orange: #f5a500;
+  --primary-dark: rgba(255, 255, 255, 0);
+  --primary-red: #ef4035;
+  --primary-hover-red: #f33501;
 }
 
 body {
-  font-family: "Roboto Condensed" sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .logo {
-  margin-top:0.5rem;
+  margin-top: 0.5rem;
+}
+
+nav {
+  z-index: 2;
 }
 
 nav a.nav-link {
@@ -41,10 +47,86 @@ nav ul li {
   height: 4rem !important;
 }
 
-.navbar-nav > li > a.active, .navbar-nav> li > a.active:focus{
-    border-top: 0.1875rem solid var(--primary-orange);
+.navbar-nav > li > a.active,
+.navbar-nav > li > a.active:focus {
+  border-top: 0.1875rem solid var(--primary-orange);
 }
 
-.navbar-nav> li > a:hover{
-    border-top: 0.1875rem solid var(--primary-orange);
+.navbar-nav > li > a:hover {
+  border-top: 0.1875rem solid var(--primary-orange);
+}
+
+.header-wrapper {
+  position: relative;
+  background: url("https://images.squarespace-cdn.com/content/v1/58922665414fb57eb1b11e72/1493056202182-GLZX2EY0W3D6RKXIYTJ6/ke17ZwdGBToddI8pDm48kNvT88LknE-K9M4pGNO0Iqd7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1USOFn4xF8vTWDNAUBm5ducQhX-V3oVjSmr829Rco4W2Uo49ZdOtO_QXox0_W7i2zEA/Untitled.001.jpeg?format=2500w")
+    no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.main-info h1 {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+  /* font-size: 2rem; */
+}
+
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-white);
+}
+
+@media (max-width: 768px){
+  .main-info h1 {
+    font-size: 1.5rem !important;
+  }
+
+  .typed-text {
+    font-size: 1.3rem !important;
+  }
+  
+}
+
+
+.btn-main-offer {
+  border: 1px solid var(--primary-red);
+  text-transform: uppercase;
+  border-radius: 0;
+  color: var(--primary-white);
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+  margin: 2rem;
+}
+
+.btn-main-offer:hover {
+  text-decoration: none;
+  background-color: var(--primary-hover-red);
+  color: var(--primary-white);
+  transition: 0.2s ease-out;
+}
+
+.tsparticles-canvas-el {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .particles-canvas{
+    display: none
+  }
 }
